# tree-sitter-strings

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-strings.pc.in  tree-sitter-tree-sitter-strings.pc.in
bindings/c/tree_sitter/: tree-sitter-strings.h  tree-sitter-tree-sitter-strings.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_strings/: __init__.py  binding.c
bindings/python/tree_sitter_tree_sitter_strings/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterStringsTests/: TreeSitterStringsTests.swift
queries/: highlights.scm
queries/strings/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  example.txt
